re PR c++/65525 (ICE: sorry, unimplemented: unexpected AST of kind mem_ref (-std=c++14, ICE: in potential_constant_expression_1, at cp/constexpr.c:4432))

PR c++/65525
	* constexpr.c (potential_constant_expression_1): Handle MEM_REF.

From-SVN: r221699